--- a/DevGames/app/build.gradle
+++ b/DevGames/app/build.gradle
@@ -8,10 +8,10 @@ android {
         applicationId "baecon.devgames"
         minSdkVersion 19
         targetSdkVersion 23
-        versionCode 8
-        versionName "0.0.8"
+        versionCode 9
+        versionName "0.0.9"
         buildConfigField "String", "GCM_SENDER_ID", "\"69868578367\""
-        buildConfigField "String", "ENDPOINT_URL", "\"http://marcelhollink.nl/api\""
+        buildConfigField "String", "ENDPOINT_URL", "\"http://192.168.0.113:8080\""
     }
     buildTypes {
         debug {
