--- a/DevGames/app/build.gradle
+++ b/DevGames/app/build.gradle
@@ -1,15 +1,22 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'Mjollnir'
+            keyPassword 'Hollink'
+            storeFile file('C:/Users/Marcel/Documents/GitHub/DevGames-App/DevGames/keystore.jks')
+            storePassword 'DevGames'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-
     defaultConfig {
         applicationId "baecon.devgames"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 9
-        versionName "0.0.9"
+        versionName "0.1.1"
         buildConfigField "String", "GCM_SENDER_ID", "\"69868578367\""
         buildConfigField "String", "ENDPOINT_URL", "\"http://192.168.0.113:8080\""
     }
@@ -28,19 +35,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.j256.ormlite:ormlite-android:4.48'
-
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
     compile 'com.squareup:otto:1.3.3'
-
     compile 'com.nineoldandroids:library:2.4.0'
-
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.google.code.gson:gson:2.4'
-
-    testCompile "org.mockito:mockito-core:1.10.19"
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
