implemented a lot of stuff, from loading projects and pushes for a user to updating ui and showing data. Started working on loading commits for a push - later issues and duplications.

--- a/DevGames/app/src/main/AndroidManifest.xml
+++ b/DevGames/app/src/main/AndroidManifest.xml
@@ -27,6 +27,12 @@
         <activity
             android:name=".ui.activity.LoginActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.ProjectDetailsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.PushDetailsActivity"
+            android:screenOrientation="portrait" />
 
         <receiver android:name=".connection.push.gcm.GcmBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
